--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ gunicorn = "==20.0.4"
 [dev-packages]
 "zest.releaser" = "*"
 coverage = "*"
+markdown = "*"
 
 [requires]
 python_version = "3.8.5"
